[gd_scene load_steps=2 format=3 uid="uid://bx4lbx1id2bwd"]

[ext_resource type="Script" path="res://scripts/pause.gd" id="1_wphg7"]

[node name="Pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wphg7")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 0
offset_left = 402.0
offset_top = 32.0
offset_right = 809.0
offset_bottom = 625.0
alignment = 1
vertical = true

[node name="VBoxContainer" type="VBoxContainer" parent="BoxContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="BoxContainer/VBoxContainer"]
layout_mode = 2
text = "Reprendre"

[node name="Options" type="Button" parent="BoxContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Options"

[node name="MainMenu" type="Button" parent="BoxContainer/VBoxContainer"]
layout_mode = 2
text = "Menu Principal
"

[node name="Quit" type="Button" parent="BoxContainer/VBoxContainer"]
layout_mode = 2
text = "Quitter"

[connection signal="button_up" from="BoxContainer/VBoxContainer/Resume" to="." method="_on_resume_button_up"]
[connection signal="button_up" from="BoxContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_button_up"]
[connection signal="button_up" from="BoxContainer/VBoxContainer/Quit" to="." method="_on_quit_button_up"]
